@@ -1,0 +1,5 @@
+[name]
+Empty document
+
+[input]
+[output]
