@@ -7,6 +7,7 @@
  - Fix conversion of nested =over blocks.
  - Fix conversion of =over blocks without an =item.
  - Output the document before erroring out if POD errors were seen.
+ - Suppress \signature if the input document was empty.
  - Add bugtracker, homepage, and repository package metadata.
 
 2.00 - 2021-03-28
